<resources>
    <string name="app_name">TipTime2</string>
    <string name="good_20">Good(20%)</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="okay_15">Okay(15%)</string>
    <string name="calculate">CALCULATE</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="store_image">store image</string>
</resources>